# signalhub

./: .env.example  .gitattributes  .gitignore  README.md  fetch-assessment-from-pi.ps1  pyproject.toml  redeploy-to-pi.ps1  requirements.txt  run-dashboard.ps1  secrets.example.toml  setup-local.ps1  streamlit_app.py
.ssh.pi-deploy/: README.md
.streamlit/: config.toml
examples/workspace-root-windows/: ble.ps1  run-dashboard.ps1  setup-signalhub.ps1
scripts/: publish_to_github.py
scripts/dev/: run-dashboard.ps1  setup-editable.ps1  signalhub-ble.ps1
scripts/pi/: New-SignalhubDeployKey.ps1  capture_loop.sh  deploy_from_dev.sh  deploy_from_windows.ps1  deploy_remote.sh  fetch_pi_assessment.ps1  import_loop.sh  install_extcap_from_zip.sh  install_pi.sh  ledger_refresh.sh  remote_extract_and_deploy.sh  resolve_sniffer_iface.py  ssh_keygen_ed25519.cmd
scripts/pi/systemd/: signalhub-ble-collector.service  signalhub-ble-importer.service  signalhub-ble-ledger-refresh.service  signalhub-ble-ledger-refresh.timer  signalhub-ble.target
scripts/pi/udev/: 80-signalhub-nrf-ble-sniffer.rules
src/signalhub/: __init__.py  config.py
src/signalhub/ble/: __init__.py  __main__.py  advanced_analytics.py  assessment_enrichment.py  classify.py  cli.py  decrypt_workflow.py  identity.py  ingest.py  insight_analytics.py  ledger.py  models.py  multi_sensor.py  normalize.py  parser.py  reports.py  rf_inferences.py  tshark.py
src/signalhub/common/: csv_export.py  io.py  logging.py  manuf_lookup.py  sig_lookup.py  textutil.py  timeutil.py
tests/: __init__.py  test_ble_workflows.py
(+10 files in other folders)
