[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "signalhub"
version = "0.1.1"
description = "BLE session ingestion and device ledger for nRF52840 DK / Wireshark captures"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "click>=8.1",
]

[project.optional-dependencies]
dev = ["ruff>=0.4"]
review = ["streamlit>=1.28"]

[project.scripts]
signalhub-ble = "signalhub.ble.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
