[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "signalhub"
version = "0.1.1"
description = "BLE session ingestion and device ledger for nRF52840 DK / Wireshark captures"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "click>=8.1",
  "streamlit>=1.28",
]

[project.optional-dependencies]
dev = ["ruff>=0.4"]
# setuptools 81+ drops top-level pkg_resources; PyInstaller's altgraph still imports it.
desktop = ["pyinstaller>=6.0", "setuptools>=69,<81"]
# Backward compatible no-op (streamlit is already a core dependency):
review = []

[project.scripts]
signalhub-ble = "signalhub.ble.cli:main"
signalhub-desktop = "signalhub.launcher.windows_desktop:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
